# test_git

./: a.test.ipynb  advanced_text_analysis.py  categorical_variables_statistics.csv  complete_econometric_table.py  comprehensive_econometric_analysis.py  comprehensive_econometric_statistics.csv  data_preprocessing_pipeline.py  economic_logit_analysis.py  kltn-huong.ipynb  main.py  numeric_variables_statistics.csv  processed_data_statistics.csv  pyproject.toml  text_to_numeric_converter.py  tfidf_econometric_analysis.py  xai.ipynb
data/: train_enhanced.csv
exps/: tfidf_feature_importance.csv  tfidf_model_summary.csv
img/: Economic_Regression_Analysis_Report.md
