[project]
name = "huong-kltn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hf-xet>=1.1.10",
    "ipywidgets>=8.1.7",
    "kagglehub>=0.3.13",
    "lightgbm>=4.6.0",
    "lime>=0.2.0.1",
    "matplotlib>=3.10.6",
    "more-itertools>=10.8.0",
    "nltk>=3.9.1",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "pip>=25.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
    "statsmodels>=0.14.5",
    "textblob>=0.19.0",
    "torch>=2.8.0",
    "transformers>=4.56.2",
    "vadersentiment>=3.3.2",
]
